# simulicore

./: CHANGELOG.md  CMakeLists.txt  INSTALL.md  NOTICE  README.md  TRADEMARK.md
cla3p.mod/: CMakeLists.txt  README.md
cla3p.mod/documentation/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  modules.dox  sectionfixer.sh  standard_docs.dox  tutorial.dox
cla3p.mod/examples/: CMakeLists.txt  example_builder_i32.sh  example_builder_i64.sh  example_executor.sh  example_executor_i32.sh
cla3p.mod/examples/cmake_list_install/: CMakeLists.txt
cla3p.mod/examples/src/: CMakeLists.txt  ex01a_dense_vector_create.cpp  ex01c_dense_vector_create_from_aux_data.cpp  ex01f_dense_vector_move.cpp  ex01i_dense_vector_algebra_scale.cpp  ex02a_dense_matrix_create.cpp  ex02c_dense_matrix_create_with_property.cpp  ex02d_dense_matrix_create_from_aux_data.cpp  ex02g_dense_matrix_move.cpp  ex02k_dense_matrix_algebra_scale.cpp  ex03a_permutation_matrix_create.cpp  ex03c_permutation_matrix_create_identity.cpp  ex03d_permutation_matrix_create_random.cpp  ex05c_solving_linear_systems_auto.cpp  ex06a_sparse_matrix_create.cpp  ex06b_sparse_matrix_fill.cpp  ex06c_sparse_matrix_create_with_property.cpp  ex06d_sparse_matrix_create_from_aux_data.cpp  ex06k_sparse_matrix_algebra_scale.cpp  ex06l_sparse_matrix_algebra_add.cpp  ex06m_sparse_matrix_algebra_vmult.cpp  ex06n_sparse_matrix_algebra_mmult.cpp  ex07a_solving_sparse_linear_systems_lu.cpp  ex07b_solving_sparse_linear_systems_llt.cpp  ex07c_solving_sparse_linear_systems_ldlt.cpp  ex07d_solving_sparse_linear_systems_operators.cpp  ex07e_solving_sparse_linear_systems_auto.cpp  ex08a_qr_decomposition.cpp  ex08b_sv_decomposition.cpp  ex09a_lowrank_matrix_create.cpp
cla3p.mod/source/: CMakeLists.txt
cla3p.mod/source/cla3p/: CMakeLists.txt  algebra.hpp  dense.hpp  error.hpp  linsol.hpp  lra.hpp  perms.hpp  qr.hpp  sparse.hpp  support.hpp  svd.hpp  types.hpp  virtuals.hpp
cla3p.mod/source/cla3p/algebra/: CMakeLists.txt  functional_add.cpp  functional_add.hpp  functional_inner.cpp  functional_inner.hpp  functional_multmm.cpp  functional_multmm.hpp  functional_multmv.cpp  functional_multmv.hpp  functional_outer.cpp  functional_outer.hpp  functional_update.cpp  functional_update.hpp  operators_add.hpp  operators_linsol.cpp  operators_linsol.hpp  operators_mult_inner.hpp  operators_mult_outer.hpp  operators_multmm.hpp  operators_multmv.hpp  operators_multxx.hpp  operators_perm.cpp  operators_perm.hpp  operators_scale.hpp  operators_update.hpp
cla3p.mod/source/cla3p/bulk/: csc.cpp  csc.hpp  csc_math.cpp  csc_math.hpp  dns.cpp  dns.hpp  dns_io.cpp  dns_io.hpp  dns_math.cpp  dns_math.hpp
cla3p.mod/source/cla3p/checks/: basic_checks.cpp  basic_checks.hpp  block_ops_checks.cpp  block_ops_checks.hpp  coo_checks.cpp  coo_checks.hpp  csc_checks.cpp  csc_checks.hpp  decomp_auto_checks.hpp  decomp_ldlt_checks.hpp  decomp_llt_checks.hpp  decomp_lu_checks.hpp  decomp_xx_checks.hpp  dns_checks.cpp  dns_checks.hpp  hermitian_coeff_checks.cpp  hermitian_coeff_checks.hpp  lapack_checks.cpp  lapack_checks.hpp  matrix_math_checks.cpp  matrix_math_checks.hpp  outer_checks.cpp  outer_checks.hpp  perm_checks.cpp  perm_checks.hpp  solve_checks.hpp  transp_checks.cpp  transp_checks.hpp
cla3p.mod/source/cla3p/dense/: CMakeLists.txt  dns_cxmatrix.cpp  dns_cxvector.cpp  dns_cxvector.hpp  dns_xivector.cpp  dns_xivector.hpp  dns_xxcontainer.cpp  dns_xxcontainer.hpp  dns_xxcontainer_base.hpp  dns_xxmatrix.cpp  dns_xxmatrix.hpp  dns_xxvector.cpp  dns_xxvector.hpp
cla3p.mod/source/cla3p/generic/: CMakeLists.txt  coord.hpp  guard.hpp  matrix_meta.hpp  meta1d.hpp  meta2d.hpp  ownership.cpp  ownership.hpp  tuple.hpp  type_traits.hpp
cla3p.mod/source/cla3p/lra/: CMakeLists.txt  lra_math.cpp  lra_math.hpp  lra_xxmatrix.cpp  lra_xxmatrix.hpp  rank_moderator.cpp  rank_moderator.hpp
cla3p.mod/source/cla3p/sparse/: CMakeLists.txt  coo_xxmatrix.cpp  coo_xxmatrix.hpp  csc_xxcontainer.cpp  csc_xxcontainer.hpp  csc_xxcontainer_base.hpp  csc_xxmatrix.cpp  csc_xxmatrix.hpp
cla3p.mod/source/cla3p/virtuals/: CMakeLists.txt  virtual_conjugate.hpp  virtual_expression.hpp  virtual_object.hpp  virtual_outer.hpp  virtual_plus_minus.hpp  virtual_product.hpp  virtual_product_specs_impl.hpp  virtual_rowvec.cpp  virtual_rowvec.hpp  virtual_scale.hpp  virtual_transpose.cpp  virtual_transpose.hpp
cla3p.mod/syntax/cpp/: syntax.vim
cmake/: compiler.cmake  openmp.cmake  os.cmake
cmake/3rd/: CMakeLists.txt  armpl.md  cuda.lin.cmake  cuda.win.cmake  mkl.md
cmpi.mod/: CMakeLists.txt  README.md
cmpi.mod/documentation/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  modules.dox  sectionfixer.sh  tutorial.dox
cmpi.mod/images/: CMakeLists.txt
culite.mod/: CMakeLists.txt  README.md
culite.mod/documentation/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  modules.dox  sectionfixer.sh  standard_docs.dox  tutorial.dox
culite.mod/examples/: CMakeLists.txt  example_builder.sh  example_builder_i64.sh  example_executor_i64.sh
culite.mod/examples/cmake_list_install/: CMakeLists.txt
culite.mod/examples/src/: CMakeLists.txt  ex01a_dense_vector_create.cpp
culite.mod/images/: CMakeLists.txt
culite.mod/source/: CMakeLists.txt
culite.mod/source/culite/: CMakeLists.txt  dense.hpp  error.hpp  support.hpp  types.hpp
culite.mod/source/culite/dense/: CMakeLists.txt  dns_cxmatrix.cpp  dns_cxmatrix.hpp  dns_cxvector.cpp  dns_cxvector.hpp  dns_xivector.cpp  dns_xivector.hpp  dns_xxcontainer.cpp  dns_xxcontainer.hpp  dns_xxmatrix.cpp  dns_xxmatrix.hpp  dns_xxvector.cpp  dns_xxvector.hpp
culite.mod/source/culite/error/: CMakeLists.txt  cuda.cpp  cuda.hpp  exceptions.cpp  exceptions.hpp  literals.cpp  literals.hpp
culite.mod/source/culite/generic/: CMakeLists.txt  guard.hpp
culite.mod/source/culite/support/: CMakeLists.txt  imalloc.cpp  imalloc.hpp  utils.cpp  utils.hpp
culite.mod/source/culite/types/: CMakeLists.txt  enums.cpp  enums.hpp  integer.cpp  integer.hpp  scalar.cpp  scalar.hpp  traits.hpp
culite.mod/syntax/cpp/: syntax.vim
docs/: index.html
sample/: CMakeLists.txt  sample.cpp
(+732 files in other folders)
