set(CMPI_DOCUMENTATION_INSTALL documentation/cmpi)

install(FILES Doxyfile DESTINATION ${CMPI_DOCUMENTATION_INSTALL})
install(FILES DoxygenLayout.xml DESTINATION ${CMPI_DOCUMENTATION_INSTALL})
install(FILES modules.dox DESTINATION ${CMPI_DOCUMENTATION_INSTALL})
install(FILES tutorial.dox DESTINATION ${CMPI_DOCUMENTATION_INSTALL})
install(FILES cmpidoxygen.css DESTINATION ${CMPI_DOCUMENTATION_INSTALL})
install(PROGRAMS sectionfixer.sh DESTINATION ${CMPI_DOCUMENTATION_INSTALL})

install(FILES ${CMPI_ROOT}/README.md DESTINATION ${CMPI_DOCUMENTATION_INSTALL})

set(CMPI_VERSION "${CMAKE_CURRENT_BINARY_DIR}/cmpiversion.dox")
file(WRITE ${CMPI_VERSION} "PROJECT_NUMBER = \"v${CMAKE_PROJECT_VERSION}\"")
install(FILES ${CMPI_VERSION} DESTINATION ${CMPI_DOCUMENTATION_INSTALL})
