set(CULITE_DOCUMENTATION_INSTALL documentation/culite)

install(FILES Doxyfile DESTINATION ${CULITE_DOCUMENTATION_INSTALL})
install(FILES DoxygenLayout.xml DESTINATION ${CULITE_DOCUMENTATION_INSTALL})
install(FILES modules.dox DESTINATION ${CULITE_DOCUMENTATION_INSTALL})
install(FILES tutorial.dox DESTINATION ${CULITE_DOCUMENTATION_INSTALL})
install(FILES culitedoxygen.css DESTINATION ${CULITE_DOCUMENTATION_INSTALL})
install(PROGRAMS sectionfixer.sh DESTINATION ${CULITE_DOCUMENTATION_INSTALL})

install(FILES ${CULITE_ROOT}/README.md DESTINATION ${CULITE_DOCUMENTATION_INSTALL})

set(CULITE_VERSION "${CMAKE_CURRENT_BINARY_DIR}/culiteversion.dox")
file(WRITE ${CULITE_VERSION} "PROJECT_NUMBER = \"v${CMAKE_PROJECT_VERSION}\"")
install(FILES ${CULITE_VERSION} DESTINATION ${CULITE_DOCUMENTATION_INSTALL})
